[metadata]
name = pykmm
version = 0.0.1
author = Natalie
author_email = natalie@natnat.xyz
description = Libraries to generate P25 KMM frames and bodies to enable over the air or local rekeying of P25 radios (compliant to TIA102 spec)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dvmproject/dvmfne-corelib
project_urls =
    Bug Tracker = https://github.com/dvmproject/dvmfne-corelib/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv2
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bitarray>=0.8.1
    pyserial>=3.5

[options.packages.find]
where = src
